--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,10 @@
+# frontend/package.json 수정
+
 {
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -37,5 +39,35 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  }
+}
+
+# backend/package.json 수정
+
+{
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "교재 관리 시스템 백엔드",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": ["textbook", "management", "education"],
+  "author": "장동민",
+  "license": "ISC",
+  "type": "commonjs",
+  "dependencies": {
+    "express": "^5.1.0",
+    "sequelize": "^6.37.7",
+    "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.0"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   }
 }
