--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -5,4 +5,4 @@
 REACT_APP_API_URL=http://localhost:5000
 
 # 배포시 예시:
-# REACT_APP_API_URL=https://your-backend-url.vercel.app
+REACT_APP_API_URL=https://api.mclass.store
